  *   - Renamed all driver termination *_ShutDown() functions to the more logical name *_Disable()
  *   - Reduced latency for executing the Start-Of-Frame events (if enabled in the user application)
  *   - Removed Pipe_ClearErrorFlags(), pipe error flags are now automatically cleared when Pipe_ClearError() is called
  *  - Library Applications:
  *   - Changed the XPLAINBridge software UART to use the regular timer CTC mode instead of the alternative CTC mode
  *     via the Input Capture register, to reduce user confusion
  *   - Combined page and word ISP programming mode code in the AVRISP-MKII clone project to reduce compiled size and
  *     increase maintainability of the code
  *   - Changed over library projects to use the new general ring buffer library driver module
  *   - Added new high level TWI packet read/write commands, altered behaviour of the TWI_StartTransmission() function
  *   - Changed TempDataLogger project's DS1307 driver to simplify the function interface and prevent a possible race condition
  *   - Changed AVRISP-MKII project to use the Watchdog interrupt for command timeouts, to reduce CPU usage and free timer 0
  *     for other uses
  *
  *  <b>Fixed:</b>
  *  - Core:
  *   - Fixed broken USBFOO board drivers due to missing BOARD_USBFOO define
  *   - Fixed HID host class driver incorrectly binding to HID devices that do not have an OUT endpoint
  *   - Fixed incorrect definition of the HID_KEYBOARD_SC_D constant in the HID class driver (thanks to Opendous Inc.)
  *   - Fixed incorrect definition of the HID_KEYBOARD_SC_RIGHT_ARROW constant in the HID class driver (thanks to Joby Taffey)
  *   - Fixed incorrect endpoint initialisation order in the several device demos (thanks to Rick Drolet)
  *   - Fixed inverted Minimum board LEDs
  *   - Fixed incorrect byte ordering in the Audio_Device_WriteSample24 function (thanks to WZab)