@@ -199,8 +199,8 @@ void MassStorage_Task(void)
 	if (IsMassStoreReset)
 	{
 		/* Reset the data endpoint banks */
-		Endpoint_ResetFIFO(MASS_STORAGE_OUT_EPNUM);
-		Endpoint_ResetFIFO(MASS_STORAGE_IN_EPNUM);
+		Endpoint_ResetEndpoint(MASS_STORAGE_OUT_EPNUM);
+		Endpoint_ResetEndpoint(MASS_STORAGE_IN_EPNUM);
 
 		Endpoint_SelectEndpoint(MASS_STORAGE_OUT_EPNUM);
 		Endpoint_ClearStall();
