@@ -22,6 +22,10 @@
  *      with a \c NULL parameter.
  *    - The \ref Serial_ReceiveByte() function has changed, and now returns a signed 16-bit integer, with -1 indicating no data was
  *      received.
+ *    - The TWI driver \ref TWI_Init() function now expects additional prescaler and bitlength parameters. See the function
+ *      documentation for more details.
+ *    - The name postfix on all driver modules to turn off and disable that module has been changed from *_ShutDown() to *_Disable().
+ *      Rename all references to these functions to use the new function names.
  *
  *  <b>USB Core</b>
  *    - By default, unordered Endpoint and Pipe configuration is now allowed once again, via the previous workaround of
@@ -37,6 +41,8 @@
  *      error code to allow the user application to determine when to send the next chunk of data.
  *    - The \ref CDC_Device_SendString() function now expects a null terminated string instead of an explicit length. Existing code
  *      should use the new \ref CDC_Device_SendData() function, or remove the length parameter from the function call.
+ *    - The Endpoint_ResetFIFO() function has been renamed to \ref Endpoint_ResetEndpoint(), to make the API function names more
+ *      consistent. Existing applications using the old function name should simply replace it with a call to the new function name.
  *
  *  <b>Host Mode</b>
  *    - The Pipe stream functions now all require a \c BytesProcessed parameter instead of the previous callback parameter.
@@ -47,6 +53,8 @@
  *    - The \ref PRNT_Host_SendString() and \ref CDC_Host_SendString() functions now expect a null terminated string instead of an explicit
  *      length. Existing code should use the new \ref PRNT_Host_SendData() and \ref CDC_Host_SendData() functions, or remove the
  *      length parameter from the function call.
+ *    - The Pipe_ClearErrorFlags() function has been removed, as the pipe error flags are now automatically cleared when the
+ *      \ref Pipe_ClearError() function is called.
  *
  *  \section Sec_Migration101122 Migrating from 100807 to 101122
  *  <b>USB Core</b>
